crustaceans no regeneration
crustaceans no regeneration

--- a/crawl-ref/source/dat/species/added_10_crustaceans.yaml
+++ b/crawl-ref/source/dat/species/added_10_crustaceans.yaml
@@ -48,6 +48,7 @@ levelup_stats:
   - dex
 mutations:
   1:
+    MUT_NO_REGENERATION : 1
     MUT_CARNIVOROUS : 1
     MUT_BLURRY_VISION : 1
     MUT_SHAGGY_FUR: 1
